<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linerbarminface"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mf_save"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerInside"
                    android:layout_marginLeft="@dimen/activition_20"
                    android:background="@mipmap/ic_return" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_face_detection_settings"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#333333"></View>

    <TextView
        android:paddingLeft="30dp"
        android:layout_marginTop="@dimen/gate_30_dp"
        android:text="@string/hint_threshold_restart"
        android:textColor="@color/gate_FF999999"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:id="@+id/linerminface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/sr_liner_rectangle"
                >
                <RelativeLayout
                    android:id="@+id/minRepresent"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/minFaceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/label_min_face_detection"
                        android:textColor="@color/white"
                        android:layout_centerVertical="true"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/companyminFace"
                        android:layout_toRightOf="@+id/minFaceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:text="@string/hint_min_face_unit"
                        android:textColor="#3F3F3F"
                        android:textSize="17sp"/>

                    <Button
                        android:id="@+id/minface"
                        android:layout_toRightOf="@+id/companyminFace"
                        android:layout_centerVertical="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:background="@mipmap/icon_setting_question"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/minface"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentRight="true"
                            >
                            <ImageView
                                android:id="@+id/mf_Decrease"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:scaleType="centerInside"
                                android:src="@mipmap/icon_setting_minus" />

                            <EditText
                                android:id="@+id/mf_etAmount"
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:background="@drawable/sr_liner_rectangle_black"
                                android:focusable="false"
                                android:gravity="center"
                                android:inputType="number"
                                android:minWidth="60dp"
                                android:text="90"
                                android:textColor="#CCCCCC"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/mf_Increase"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:scaleType="centerInside"
                                android:src="@mipmap/icon_setting_add" />
                        </LinearLayout>
                    </RelativeLayout>


                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="#333333"></View>

                <RelativeLayout
                    android:id="@+id/faceThreshold"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/min_face_threshold_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/label_face_confidence"
                        android:textColor="@color/white"
                        android:textSize="20sp"></TextView>

                    <Button
                        android:layout_toRightOf="@+id/min_face_threshold_tx"
                        android:id="@+id/min_face_threshold"
                        android:layout_centerVertical="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:background="@mipmap/icon_setting_question"></Button>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/min_face_threshold"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentRight="true"
                            >
                            <ImageView
                                android:id="@+id/mf_face_threshold"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:scaleType="centerInside"
                                android:src="@mipmap/icon_setting_minus" />

                            <EditText
                                android:id="@+id/mf_et_face_threshold"
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:background="@drawable/sr_liner_rectangle_black"
                                android:focusable="false"
                                android:gravity="center"
                                android:inputType="number"
                                android:minWidth="60dp"
                                android:text="90"
                                android:textColor="#CCCCCC"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/mf_plus_face_threshold"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:scaleType="centerInside"
                                android:src="@mipmap/icon_setting_add" />
                        </LinearLayout>
                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/multiFaceLv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:background="@drawable/sr_liner_rectangle"
                >

                <RelativeLayout
                    android:id="@+id/multiFaceRv"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/multiFaceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/label_multi_face_recognition"
                        android:textColor="@color/white"
                        android:textSize="20sp"></TextView>

                    <Button
                        android:id="@+id/multiFaceBtn"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/multiFaceTv"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:background="@mipmap/icon_setting_question"></Button>

                    <Switch
                        android:id="@+id/multiFaceSw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumb="@drawable/setting_switch_thumb"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="22.5dp"
                        android:track="@drawable/setting_switch_track_selector" />


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/maskLv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:background="@drawable/sr_liner_rectangle"
                >

                <RelativeLayout
                    android:id="@+id/maskRv"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/maskTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/label_mask_recognition"
                        android:textColor="@color/white"
                        android:textSize="20sp"></TextView>

                    <Button
                        android:id="@+id/maskBtn"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/maskTv"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:background="@mipmap/icon_setting_question"></Button>

                    <Switch
                        android:id="@+id/maskSw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumb="@drawable/setting_switch_thumb"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="22.5dp"
                        android:track="@drawable/setting_switch_track_selector" />


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="23dp"
            android:alpha="0.4"
            android:gravity="center_horizontal"
            android:text="@string/footer_baidu_brain_support"
            android:textColor="#666666"
            android:textSize="@dimen/bottom_font" />
    </RelativeLayout>

</LinearLayout>